# eyes

./: .gitignore  .gitmodules  CMakeLists.txt  Eye.qml  main.qml  qml.qrc
src/: CMakeLists.txt  emotion_handler.cpp  emotion_handler.h  main.cpp
src/resources/: Eye.qml  Lid.qml  Pupil.qml  Startup.qml  main.qml  resources.qrc
